featt: first commit

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,8 @@
 [mypy]
 files = src
 mypy_path = src
-
+disallow_untyped_defs = True
+strict_equality = True
 [mypy-a2a_types]
 ignore_errors = True
 
