--- a/a2a-client/package.json
+++ b/a2a-client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/fira-code": "^5.2.5",
+    "@tanstack/react-query": "^5.74.7",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
