--- a/a2a-client/package.json
+++ b/a2a-client/package.json
@@ -19,6 +19,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.5.3",
     "styled-components": "^6.1.17",
     "uuid": "^11.1.0"
   },
