--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,9 @@
 [mypy]
-files = src
-mypy_path = src
+; files = elkar
+; mypy_path = elkar
 disallow_untyped_defs = True
 strict_equality = True
+
 [mypy-a2a_types]
 ignore_errors = True
 
