--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,23 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
-name = "agent-project"
+name = "elkar"
 version = "0.1.0"
-description = "Add your description here"
+description = "The open-source protocol to send, track, and orchestrate tasks between AI agents"
 readme = "README.md"
 requires-python = ">=3.12"
+license = "MIT"
+authors = [{ name = "Laurent Meunier", email = "laurent@breezyai.co" }]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
     "typing>=3.10.0.0",
     "pydantic",
@@ -14,9 +28,14 @@ dependencies = [
     "colorlog>=6.9.0",
 ]
 
-
-[tool.uv]
-package = true
+[project.urls]
+Homepage = "https://elkar.co"
+Documentation = "https://github.com/elkar-ai/elkar"
+Repository = "https://github.com/elkar-ai/elkar"
+Issues = "https://github.com/elkar-ai/elkar/issues"
 
 [project.optional-dependencies]
 dev = ["mypy", "datamodel-code-generator", "datamodel-code-generator[http]"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
