--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,9 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "elkar"
-version = "0.1.0"
+version = "0.1.4"
 description = "The open-source protocol to send, track, and orchestrate tasks between AI agents"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 license = "MIT"
 authors = [{ name = "Laurent Meunier", email = "laurent@breezyai.co" }]
 classifiers = [
@@ -17,9 +13,9 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed",
 ]
 dependencies = [
-    "typing>=3.10.0.0",
     "pydantic",
     "fastapi",
     "starlette>=0.46.2",
@@ -34,8 +30,23 @@ Documentation = "https://github.com/elkar-ai/elkar"
 Repository = "https://github.com/elkar-ai/elkar"
 Issues = "https://github.com/elkar-ai/elkar/issues"
 
-[project.optional-dependencies]
-dev = ["mypy", "datamodel-code-generator", "datamodel-code-generator[http]"]
+[tool.mypy]
+disallow_untyped_defs = true
+strict_equality = true
+
+[tool.uv]
+dev-dependencies = [
+    "mypy",
+    "datamodel-code-generator",
+    "datamodel-code-generator[http]",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["src/elkar"]
+
+[tool.hatch.build.targets.wheel.shared-data]
+"py.typed" = "py.typed"
