--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "elkar"
-version = "0.1.4"
+version = "0.1.0"
 description = "The open-source protocol to send, track, and orchestrate tasks between AI agents"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -22,6 +22,8 @@ dependencies = [
     "sse-starlette>=2.3.3",
     "uvicorn>=0.34.2",
     "colorlog>=6.9.0",
+    "psycopg>=3.2.7",
+    "sqlalchemy>=2.0.40",
 ]
 
 [project.urls]
@@ -44,9 +46,3 @@ dev-dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/elkar"]
-
-[tool.hatch.build.targets.wheel.shared-data]
-"py.typed" = "py.typed"
