--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,11 @@ dependencies = [
     "colorlog>=6.9.0",
     "psycopg>=3.2.7",
     "sqlalchemy>=2.0.40",
+    "aiohttp>=3.11.18",
+    "mcp>=1.7.0",
+    "supabase>=2.15.1",
+    "pyjwt>=2.10.1",
+
 ]
 
 [project.urls]
@@ -36,11 +41,12 @@ Issues = "https://github.com/elkar-ai/elkar/issues"
 disallow_untyped_defs = true
 strict_equality = true
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "mypy",
     "datamodel-code-generator",
     "datamodel-code-generator[http]",
+    "types-pyjwt",
 ]
 
 [build-system]
