--- a/app/connector/Cargo.toml
+++ b/app/connector/Cargo.toml
@@ -36,7 +36,7 @@ tower-http = { version = "*", features = [
     "trace",
     "cors",
 ] }
-chrono = "*"
+chrono = { version = "*", features = ["serde"] }
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
 tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"] }
@@ -88,7 +88,9 @@ handlebars = "5.0.0"
 regex = "1.10.4"
 thiserror = "1.0.58"
 utoipa = { version = "*", features = ["axum_extras", "uuid", "chrono"] }
-utoipauto = "0.1.11"
+utoipa-axum = "0.2"
+
+# utoipauto = "0.1.11"
 utoipa-redoc = { version = "4.0.0", features = ["axum"] }
 utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 diesel-async = { version = "0.5.2", features = [
