--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -18,6 +18,11 @@ env:
   DATABASE_URL: postgres://superuser:password@localhost:5432/connector
 
 jobs:
+  changed-files-check:
+    uses: ./.github/workflows/changed-files.yaml
+    with:
+      files: |
+        app/connector/**
   check:
     name: Check Rust Server
     runs-on: ubuntu-latest
@@ -50,6 +55,15 @@ jobs:
 
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
+
+      - name: Install PostgreSQL client
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client
+
+      - name: Create database users
+        run: |
+          PGPASSWORD=${{ env.POSTGRES_PASSWORD }} psql -h localhost -U ${{ env.POSTGRES_USER }} -d ${{ env.POSTGRES_DB }} -f scripts/db/init/sql/create_users.sql
 
       - name: Install diesel_cli
         run: cargo install diesel_cli --no-default-features --features postgres
