feat: api for elkar onboarding

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   changed-files-check:
-    uses: ./.github/workflows/changed-files.yaml
+    uses: ./.github/workflows/changed-files.yml
     with:
       files: |
         app/connector/**
