--- a/a2a-client/tsconfig.app.json
+++ b/a2a-client/tsconfig.app.json
@@ -1,26 +1,34 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": true,
+    "target": "ESNext",
+    "lib": ["dom", "dom.iterable", "ESNext"],
+    "module": "esnext",
+    "types": ["node"],
+    "sourceMap": true,
+    "baseUrl": "src",
+    "outDir": "dist",
+    "paths": {
+      "src/*": ["./src/*"]
+    },
     "jsx": "react-jsx",
+    /* Bundler mode */
+
+    "moduleResolution": "Bundler",
+    // "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    // "moduleDetection": "force",
+    "noEmit": true,
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "skipLibCheck": true,
+    "allowJs": false,
+    // "strict": true,
+    "esModuleInterop": true,
+    "strictNullChecks": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules/", "dist/", "coverage/"]
 }
