fix: supabase url

--- a/app/connector/.env.template.development
+++ b/app/connector/.env.template.development
@@ -13,7 +13,7 @@ SENTRY_DSN=$SENTRY_DSN
 # Supabase
 SUPABASE_SECRET_KEY=$DEV_SUPABASE_SECRET_KEY
 SUPABASE_ADMIN_KEY=$DEV_SUPABASE_ADMIN_KEY
-SUPABASE_URL=https://xjdiculrethkdquasdyj.supabase.co
+SUPABASE_URL=$DEV_SUPABASE_URL
 
 
 # Front
