--- a/app/connector/.env.template.production
+++ b/app/connector/.env.template.production
@@ -17,7 +17,7 @@ OPENAI_API_KEY=$OPENAI_API_KEY
 # Supabase
 SUPABASE_SECRET_KEY=$PROD_SUPABASE_SECRET_KEY
 SUPABASE_ADMIN_KEY=$PROD_SUPABASE_ADMIN_KEY
-SUPABASE_URL=https://xtskvnknfmgtwccrrhan.supabase.co
+SUPABASE_URL=$PROD_SUPABASE_URL
 
 
 
