--- a/a2a-client/package.json
+++ b/a2a-client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
+    "react-hot-toast": "^2.4.1",
     "styled-components": "^6.1.17",
     "uuid": "^11.1.0"
   },
