--- a/a2a-client/.env.example
+++ b/a2a-client/.env.example
@@ -3,3 +3,4 @@ VITE_FRONTEND_URL='XXX'
 VITE_SUPABASE_URL='https://xxx.supabase.co'
 VITE_SUPABASE_ANON_KEY='XXX'
 VITE_ENVIRONMENT='DEVELOPMENT'
+VITE_A2A_DEBUGGER=false
