feat: pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "supabase>=2.15.1",
     "pyjwt>=2.10.1",
     "requests>=2.32.3",
+    "pre-commit>=4.2.0",
 ]
 
 [project.urls]
