--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dev = [
     "datamodel-code-generator",
     "datamodel-code-generator[http]",
     "types-pyjwt",
+    "ruff>=0.11.9",
 ]
 
 [build-system]
