--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,8 +3,7 @@ current_version = 0.1.10
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
-serialize = 
-	major.minor.patch
+serialize = {major}.{minor}.{patch}
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
