--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.10
+current_version = 0.1.12
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
@@ -9,6 +9,6 @@ serialize = {major}.{minor}.{patch}
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:src/**/__init__.py]
+[bumpversion:file:src/elkar/__init__.py]
 search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}" 
+replace = __version__ = "{new_version}"
