--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/elkar"]
+packages = ["elkar"]
+
 
 [tool.hatch.build.targets.wheel.sources]
 "src" = ""
