--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,13 +57,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["elkar"]
-
-[tool.hatch.build.targets.wheel.sources]
-"src" = ""
-
-[tool.hatch.build.targets.sdist]
-include = ["src/elkar", "README.md", "LICENSE"]
-
-[tool.hatch.build.targets.wheel.shared-data]
-"src/elkar/py.typed" = "elkar/py.typed"
+packages = ["src/elkar"]
