--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/elkar"]
+
+[tool.hatch.build]
+packages = ["src/elkar"]
