--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,8 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/elkar"]
+# [tool.hatch.build.targets.wheel]
+# packages = ["src/elkar"]
 
-[tool.hatch.build]
-packages = ["src/elkar"]
+# [tool.hatch.build]
+# packages = ["src/elkar"]
