--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "requests>=2.32.3",
     "pre-commit>=4.2.0",
+    "crew>=0.9.2",
 ]
 
 [project.urls]
@@ -55,9 +56,3 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-# [tool.hatch.build.targets.wheel]
-# packages = ["src/elkar"]
-
-# [tool.hatch.build]
-# packages = ["src/elkar"]
